--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "py-collections"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+license = {text = "MIT"}
 requires-python = ">=3.13"
 dependencies = []
 
