--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,35 @@ readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.13"
 dependencies = []
+authors = [
+    {name = "Matias Gallardo", email = "10453322+mato777@users.noreply.github.com"},
+]
+maintainers = [
+    {name = "Matias Gallardo", email = "10453322+mato777@users.noreply.github.com"},
+]
+keywords = [
+    "collections",
+    "data-structures",
+    "functional-programming",
+    "mixin",
+    "utility",
+    "python",
+    "list",
+    "dict",
+    "json",
+    "serialization",
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Libraries",
+    "Typing :: Typed",
+]
 
 [project.optional-dependencies]
 dev = [
@@ -21,6 +50,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/py_collections"]
 
 [tool.ruff]
 # Same as Black.
